fixed front logo not sizing on mobile

--- a/main.css
+++ b/main.css
@@ -225,7 +225,7 @@ text-transform: uppercase;
     font-size: 70px;
   }
 
-  .homepage-title img {
+  .homepage-title h1 img {
     width: 280px;
   }
 
